# bitext-matching

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  classDiagram.xml  deploy.sh  install-debian.sh
IBM_1&2_C++/: CMakeLists.txt  array.cpp  array.cpp.autosave  array.h  gl_defs.h  hmm.cpp  hmm.cpp.autosave  hmm.h  main.cpp  model12.cpp  model12.h  models.cpp  models.h  sentence.cpp  sentence.h  vocab.cpp  vocab.cpp.autosave  vocab.h
Python/: IBMModel1.ipynb  IBMModel2.ipynb  TestModel.ipynb  Tools.ipynb  trainmodels.ipynb
back/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile_dev  db-dev.cnf  db-dist.cnf  db.sqlite3  docker-entrypoint.sh  manage.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_prod.txt
back/bitext_matching/: schema.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
back/core/: admin.py  models.py  paginateHelper.py  schema.py  schemaBitext.py  schemaIngredient.py  schemaLink.py  subscriptions.py  views.py
back/docker/: .env-dist  .env.dist  Dockerfile  docker-compose.yml  docker-entrypoint.sh
back/lib/: IBM2_func.py  dtw.py
cgi-bin/: dtw.cpp  dtw.h  main.cpp
front/: .gitignore  package.json
front/public/: index.html
front/src/: App.css  App.js  index.js
graphcool/: package.json
graphcool/server/: .graphcoolrc  types.graphql
lib/: .gitignore
lib/enpc_aligner/: dtw.py
text/en/: le-petit-prince--antoine-de-saint-exupery.txt  pinocchio.txt
text/fr/: le-petit-prince--antoine-de-saint-exupery.txt  (+1 more)
utils/: alignment.fdesousa.fr.conf
web-extension/: manifest.json  popup.html
(+48 files in other folders)
